[project]
name = "intelligentes-testen-autonomer-fahrzeuge"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas-K1",email = "lukas.koepsel@freenet.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (==24.10.0)",
    "flake8-black (==0.3.6)",
    "isort (==6.0.0b2)",
    "pre-commit (==4.0.1)",
    "flake8 (>=7.1.1,<8.0.0)"
]
package-mode = "false"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

